First basic request/response with API

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -5,7 +5,7 @@
     <title>You created a new Customer!</title>
 </head>
 <body>
-    <p th:text="'Name: ' + ${customer.name}" />
+    <p th:text="'Name: ' + ${customerid}" />
     <a href="/customer">Add another customer</a>
 
 </body>
