--- a/src/main/resources/templates/newcustomer.html
+++ b/src/main/resources/templates/newcustomer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Form</h1>
-    <form action="#" th:action="@{/customer}" th:object="${customer}" method="post">
+    <form action="#" th:action="@{/customer/new}" th:object="${newcustomer}" method="post">
         <p>Name: <input type="text" th:field="*{name}"</p>
         <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" />></p>
     </form>
