Tweaked html and renamed some files.

--- a/src/main/resources/templates/customerpage.html
+++ b/src/main/resources/templates/customerpage.html
@@ -5,6 +5,7 @@
     <title> Customer Details </title>
 </head>
 <body>
+    <h1>Customer Details</h1>
     <p th:text="'ID: ' + ${customer.id}" />
     <p th:text="'Name: ' + ${customer.name}" />
     <p th:text="'Organisation: ' + ${customer.organisation}" />
