--- a/src/main/resources/templates/newcustomer.html
+++ b/src/main/resources/templates/newcustomer.html
@@ -6,7 +6,7 @@
     <title>Customer Entry Form</title>
 </head>
 <body>
-    <h1>Form</h1>
+    <h1>New Customer</h1>
     <form action="#" th:action="@{/customer/new}" th:object="${newcustomer}" method="post">
 
         <p>Name: <input type="text" th:field="*{name}"></p>
